--- a/tpfan-admin/share/tpfan-admin.glade
+++ b/tpfan-admin/share/tpfan-admin.glade
@@ -12,9 +12,10 @@
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <property name="program_name">ThinkPad Fan Control</property>
-    <property name="copyright">Copyright (C) 2007-2008 Sebastian Urban</property>
+    <property name="copyright">Copyright (C) 2011-2012 Vladyslav Shtabovenko
+Copyright (C) 2007-2008 Sebastian Urban</property>
     <property name="comments" translatable="yes">Monitors the temperature and controls the fan-speed of IBM/Lenovo ThinkPad Notebooks</property>
-    <property name="website">http://www.gambitchess.org/moin.py/tpfan</property>
+    <property name="website">https://code.google.com/p/tpfanco/</property>
     <property name="license">This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
@@ -27,7 +28,8 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</property>
-    <property name="authors">Sebastian Urban &lt;surban84@googlemail.com&gt;</property>
+    <property name="authors">Sebastian Urban &lt;surban84@googlemail.com&gt;
+Vladyslav Shtabovenko &lt;FEW.Entwickler@googlemail.com&gt;</property>
     <property name="documenters"></property>
     <property name="artists">Michele Ceriotti &lt;mikelito@gmail.com&gt;</property>
     <child internal-child="vbox">
